@@ -1,7 +1,7 @@
 %{!?python_sitelib: %define python_sitelib %(%{__python} -c "from distutils.sysconfig import get_python_lib; print get_python_lib()")}
 
 Name:           pungi
-Version:        0.2.1
+Version:        0.2.2
 Release:        1%{?dist}
 Summary:        Distribution compose tool
 
@@ -46,6 +46,12 @@ rm -rf $RPM_BUILD_ROOT
 
 
 %changelog
+* Mon Jan 29 2007 Jesse Keating <jkeating@redhat.com> - 0.2.2-1
+- Update the comps file again from F7
+- Fix the ppc boot flags
+- Clean up SRPM-disc junk
+- add bugurl config option for anaconda betanag
+
 * Thu Jan 25 2007 Jesse Keating <jkeating@redhat.com> - 0.2.1-1
 - Add a "flavor" option (such as Desktop)
 - Move packageorder file into workdir
