@@ -2,7 +2,7 @@ from distutils.core import setup
 import glob
 
 setup(name='pungi',
-      version='0.2.1',
+      version='0.2.2',
       description='Distribution compose tool',
       author='Jesse Keating',
       author_email='jkeating@redhat.com',
